# collinearity

./: .gitmodules  CMakeLists.txt  README.md  collinearity.h  compressed_array.h  cqueue.h  cqutils.h  index.h  index_refs.cpp  main.cpp  parlay_utils.h  prelude.h  pybindings.cpp  pyproject.toml  query.c  query.cpp
scratch/: testmain.cpp  tests.h
src/: collinearity.h  compressed_array.h  config.h  cqueue.h  cqutils.h  index.cpp  index.h  index_refs.cpp  main.cpp  mempool.h  parlay_utils.h  prelude.h  pybindings.cpp  query.cpp  rawreferences.cpp  rawsegmentation.cpp  rawsignals.cpp  rawsignals.h  tstatsegmentation.cpp  utils.h  xxhash.h
src/pycollinearity/: __init__.py  __init__.pyi  _core.pyi  aligner.py  basecaller.py  config.py  pipeline.py  prelude.py  read_cache.py  readuntil_client.py  scratch.ipynb  utils.py
tests/: test_compressed_array.cpp  test_cqueue.cpp  test_cqutils.cpp  testmain.cpp  tests.h
