[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pycollinearity"
version = "1.0.0.dev12"
description="Fast alignment of sequences to references"
readme = "README.md"
authors = [
    { name = "Sayan Goswami", email = "sayan.goswami@grlab.org" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

#[tool.scikit-build]
#minimum-version = "0.4"
#wheel.packages = ["src"]  # Ensure the built module is placed in the correct package
#
#[tool.scikit-build.cmake]
#minimum-version = "3.22"
#build-type = "Release"
#targets = ["_core"]
